fixing some fields clipping through close button

--- a/web/src/components/ui/Dialog.module.css
+++ b/web/src/components/ui/Dialog.module.css
@@ -17,6 +17,7 @@
     width: 100%;
     background-color: var(--background);
     padding-top: 1.5rem;
+    z-index: 1001;
   }
 
   h2 {
